[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Player/cogu2.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy/enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 11 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 245, 10 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )
move_speed = 20
distance_threshold = 22
enemy_damage = 10
attack_cooldown = 1.5

[node name="Texture" type="Sprite" parent="."]
position = Vector2( -6.55651e-07, 0.5 )
scale = Vector2( 0.944444, 0.958333 )
texture = ExtResource( 1 )
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -1, 1 )
shape = SubResource( 3 )

[node name="Animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 6 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_body_exited"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_timeout"]
